mise à jour taille fenêtre et ajustement du textes des constantes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="conteneur">
-        <h1>Hello World</h1>
+        <h1>Hello World !</h1>
     </div>
 </body>
 </html>
