--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="conteneur">
-        <h1>Hello Everyone !</h1>
+        <h1>Hello Everybody !</h1>
     </div>
 </body>
 </html>
