Fix issue #3 : Changement taille fenêtre

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conteneur">
+    <div class="conteneur" style="width: 500px;">
         <h1>Hello Everybody !</h1>
     </div>
 </body>
